Added the prototype of create account, forgot password, and login

--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -1,1 +1,24 @@
+<script src="javascripts/forgotPassword.js" async></script>
+
 <h2> FORGOT DA PASSWORD </h2>
+
+
+
+  <h2 class="center-text"> Forgot Password </h2>
+  <span id="response"></span>
+  <form>
+    <table>
+      <tr>
+        <td>
+          Email
+        </td>
+        <td>
+          <input id="email" type="textbox"/>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <input type="button" value="Submit" onClick="forgotPassword()"/>
+    </table>
+  </form>
+</div>
