--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,12 @@
     <table class="center-table">
       <tr>
         <td colspan="2">
-          <a href="__!!Forgot Passowrd Page!!__">Forgot Password?</a>
+          <a href="/create_account">Create An Account</a>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <a href="/forgot_password">Forgot Password?</a>
         </td>
       </tr>
       <tr>
