Added comments and made the password system stronger

--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -80,7 +80,7 @@
     </tr>
     <tr>
       <td colspan="2">
-        <input type="button" value="Submit" onclick="createAccount"/>
+        <input type="button" value="Submit" onclick="createAccount()"/>
       </td>
     </tr>
 </form>
