--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-
   <head>
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,18 +7,25 @@
     <link rel='icon' href='/images/favicon.ico' type='image/x-icon'/ >
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-
-
   <body>
     <div class="header">
       <h2>Scroll Down</h2>
-      <p>Scroll down to see the sticky effect.</p>
+      <p>SCROLL down to see the sticky effect.</p>
     </div>
 
     <ul>
-      <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a class="active" href="http://localhost:3000/">Home</a></li>
+      <li><a href="/admin_dashboard">Admin Dash</a></li>
+      <li><a href="/cart">Cart</a></li>
+      <li><a href="/check_out">Check Out</a></li>
+      <li><a href="/create_account">Create Account</a></li>
+      <li><a href="/eat_at_the_farm">Eat At Farm</a></li>
+      <li><a href="/error">Error Page</a></li>
+      <li><a href="/forgot_password">Forgot Password</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/market">Market</a></li>
+      <li><a href="/support">Support</a></li>
+      <li><a href="/user_dashboard">User Dashboard</a></li>
     </ul>
 
     <h3>Sticky Navigation Bar Example</h3>
