--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -1,2 +1,10 @@
 <h2> USER ACCOUNT DASHBOARD PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
+
+<input type=button value="logout" onClick="eraseCookie()"/>
+
+<script> function eraseCookie() {
+  document.cookie = "CID=";
+  window.location.href = "/login";
+}
+</script>
