--- a/views/admin_dashboard-manage_orders.hbs
+++ b/views/admin_dashboard-manage_orders.hbs
@@ -2,7 +2,12 @@
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
-
+<ul>
+  <li> <a href="/admin_dashboard"> Main </a> </li>
+  <li> <a href="/admin_dashboard/manage_inventory"> Manage Inventory </a> </li>
+  <li> <a href="/admin_dashboard/manage_orders"> Manage Orders </a> </li>
+  <li> <a href="/admin_dashboard/manage_accounts"> Manage Accounts </a> </li>
+</ul>
 <input type=button value="logout" onClick="eraseCookie()"/>
 
 <script> function eraseCookie() {
