--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,48 +1,109 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--URL Logo Icon-->
-    <link rel='icon' href='/images/favicon.ico' type='image/x-icon'/ >
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="header">
-      <h2>Scroll Down</h2>
-      <p>SCROLL down to see the sticky effect.</p>
-    </div>
 
-    <ul>
-      <li><a class="active" href="http://localhost:3000/">Home</a></li>
-      <li><a href="/admin_dashboard">Admin Dash</a></li>
-      <li><a href="/cart">Cart</a></li>
-      <li><a href="/check_out">Check Out</a></li>
-      <li><a href="/create_account">Create Account</a></li>
-      <li><a href="/eat_at_the_farm">Eat At Farm</a></li>
-      <li><a href="/error">Error Page</a></li>
-      <li><a href="/forgot_password">Forgot Password</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/market">Market</a></li>
-      <li><a href="/support">Support</a></li>
-      <li><a href="/user_dashboard">User Dashboard</a></li>
-    </ul>
-
-    <h3>Sticky Navigation Bar Example</h3>
-
-    <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
-    <p><strong>Note:</strong> Internet Explorer, Edge 15 and earlier versions do not support sticky positioning. Safari requires a -webkit- prefix.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-    <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-
-
-    {{{body}}}
-
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>SproutCreekFarm</title>
+    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css?h=6d65b9bd53bb19cdce4b34d2020a2b57">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="stylesheet" href="fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="fonts/ionicons.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
+    <link rel="stylesheet" href="stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
     <script src="javascripts/client.js" async></script>
-  </body>
+</head>
+
+<body style="background-color: #fffdfa;">
+    <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
+        <div class="container-fluid"><img class="img-fluid" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
+            <div><a class="navbar-brand text-left float-left" href="#" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
+            <button
+                data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
+                    <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-size: 20px;">Market</a></li>
+                        <li class="nav-item" role="presentation"></li>
+                        <li class="nav-item dropdown" style="background-color: rgb(255,250,241);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="font-size: 20px;">At The Farm&nbsp;</a>
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Visit The Farm</a><a class="dropdown-item" role="presentation" href="#">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog.html">Blog</a></div>
+                        </li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-size: 20px;">Contact</a></li>
+                        <li class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-shopping-cart fa-fw" style="font-size: 23px;height: 27px;width: 30px;margin: 3px;"></i><span class="badge badge-danger badge-counter"></span></a>
+                            <div
+                                class="dropdown-menu dropdown-list dropdown-menu-right animated--grow-in" role="menu">
+                                <h6 class="dropdown-header" style="font-size: 14px;background-color: rgb(180,116,66);">My basket</h6>
+                                <a class="d-flex align-items-center dropdown-item" href="#">
+                                    <div class="text-center float-left dropdown-list-image mr-3"><img class="rounded-circle" src="images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="width: 50px;height: 50px;"></div>
+                                    <div class="font-weight-bold">
+                                        <div class="text-truncate"><span style="font-size: 15px;">Bogart</span></div>
+                                        <p class="small text-gray-500 mb-0" style="font-size: 13px;">Price Per Unit: $12.00&nbsp;<br>Quantity: 1</p>
+                                    </div>
+                                    <div></div>
+                                    <p class="text-center d-inline float-left"></p>
+                                </a>
+                                <a class="d-flex align-items-center dropdown-item" href="#">
+                                    <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50" style="width: 50px;height: 50px;"></div>
+                                    <div class="font-weight-bold">
+                                        <div class="text-truncate"><span style="font-size: 15px;">Batch 35</span></div>
+                                        <p class="small text-gray-500 mb-0" style="font-size: 13px;">Price Per Unit: $10.00<br>Quantity: 1</p>
+                                    </div>
+                                </a><a class="text-center dropdown-item small text-gray-500" href="#" style="font-size: 20px;background-color: rgb(79,121,96);color: rgb(255,255,255);padding: 4px;"><strong>Check Out</strong></a></div>
+                </li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="padding: 8px;margin: 0px;"></a></li>
+                </ul><button class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+        </div>
+    </nav>
+
+    <!-- Body -->
+    <div class="container" style="height: 1180px;">{{{body}}}</div>
+
+    <!-- Footer -->
+    <div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul></ul><img src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul>
+                            <li style="height: 35px;font-size: 20px;">About</li>
+                            <li style="font-size: 20px;height: 35px;">Market</li>
+                            <li style="height: 35px;font-size: 20px;">At The Farm</li>
+                            <li style="font-size: 20px;height: 35px;">Support</li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
+                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Hours: &nbsp;Everyday, 11:00 AM - 4:00 PM<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
+                    </div>
+                    <div class="col item social" style="height: 41px;"><a href="#" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                    <div
+                        class="clearfix"></div>
+            </div>
+            <p class="copyright">Sprout Creek Farm © 2019</p>
+    </div>
+    </footer>
+    </div>
+    <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+    <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+    <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
+    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
+    </body>
+
 </html>
