Started to integrate files with handlebars

--- a/views/support.hbs
+++ b/views/support.hbs
@@ -1,1 +1,131 @@
-<h2> SUPPORT DA FARM!!! FOR DAH GOAtS!!! </h2>
+<body style="background-color: #fffdfa;">
+    <div data-bs-parallax-bg="true" style="height: 480px;background-image: url(&quot;assets/img/DSC_7553.jpg?h=6fb7f77418f4702a9421862424bc40f6&quot;);background-position: center;background-size: cover;"></div>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center" style="font-size: 38px;padding: 0px;margin: 0px;padding-top: 40px;padding-bottom: 40px;color: rgb(49,52,55);"><strong>About Us</strong></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="padding-top: 15px;">
+                    <header>
+                        <p class="text-center" style="font-size: 25px;color: rgb(49,52,55);"><strong>Our Mission</strong></p>
+                    </header>
+                    <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;">The mission of Sprout Creek Farm is to educate people to&nbsp;understand and appreciate our connection to the earth and&nbsp;our responsibility for its care. As well as producing and selling our meats and cheeses, the purposes of the
+                        farm are:<br><br>▶ Provide educational experiences for children and adults that will foster appreciation for, and understanding of, our place within the natural world, and thus encourage responsibility for the future of our environment<br><br>▶Offer
+                        programs that will reconnect people to the rich agricultural heritage of the United States to offer an experience of community as a model of peaceful living<br><br>▶Offer programs in spiritual development, using the agricultural
+                        resources of the farm as both setting and starting point of such programs<br></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="padding-top: 15px;">
+                    <header>
+                        <p class="text-center" style="font-size: 25px;height: 39px;margin-top: 40px;color: rgb(49,52,55);"><strong>Our Farm</strong></p>
+                    </header>
+                    <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;">Sprout Creek Farm is a center for education, farming, community building and spiritual growth. It is a place of work, of peace, of intellectual inquiry and experiential learning. It is home to a community of people, plants and animals;
+                        farmland, forest, streams and ponds, wetlands and hedgegrows, hills and rocky soils. We are a productive farm where we make cheese from the milk produced by our cows and goats. Right here we can watch the grass become milk that
+                        in turn becomes the cheese enjoyed at our table and yours. We welcome you to take a "bird's eye view" and learn more about the different programs we host, our animals and the land we farm. Better yet, come visit the Farm and experience
+                        the peacefulness yourself.&nbsp;<br><br><strong>We are open to visitors everyday from 10 am to 5 pm.</strong>&nbsp;<br><br>We hope to see you soon!<br></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="padding-top: 15px;">
+                    <header>
+                        <p class="text-center" style="font-size: 25px;margin-top: 40px;color: rgb(49,52,55);"><strong>Our People</strong></p>
+                    </header>
+                    <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;margin-left: 12px;">Meet the people who make it happen!&nbsp;</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="team-clean">
+        <div class="container">
+            <div class="row people">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Kim M. Bodendorf</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Interim Executive Director</em></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Kim@sproutcreekfarm.org">Kim@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 104</p>
+                </div>
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Margo Morris</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Director of Develpment</em><br></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Margo@sproutcreekfarm.org">Margo@sproutcreekfarm.org</a><br>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 104</p>
+                </div>
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Paula Gruner</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Accounts Management/Finance</em></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:finance@sproutcreekfarm.org">finance@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 102</p>
+                </div>
+            </div>
+            <div class="row people">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Kerry Gallagher</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Director of Education</em></p>
+                    <p class="description" style="font-size: 14px;"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:education@sproutcreekfarm.org">education@sproutcreekfarm.org</a><br><i class="fa fa-envelope-o"></i> E - Mail:&nbsp;<a href="mailto:camps@sproutcreekfarm.org">camps@sproutcreekfarm.org</a><br>
+                        <i
+                            class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 103</p>
+                </div>
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name" style="font-size: 21px;">CREAMERY PLANT MANAGER /CHEESE MAKER</h3>
+                    <p class="title"></p>
+                    <p class="description"><br><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Cheese@sproutcreekfarm.org">Cheese@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 206-0236</p>
+                </div>
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Marcello Chimbo</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Head Cheese Maker / Sales / Shipping / Distribution</em></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Cheese@sproutcreekfarm.org">Cheese@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845)-206-0236</p>
+                </div>
+            </div>
+            <div class="row people">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Connie Riley</h3>
+                    <p class="title" style="color: rgb(163,162,162);"><em>Sales Manager&nbsp;</em><br><em>Events/Cheese/Retail</em></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Connie@sproutcreekfarm.org">Connie@sproutcreekfarm.org</a><br>&nbsp; Telephone:&nbsp;(845) 485-9885</p>
+                </div>
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+                    <h3 class="name">Shawn Wilcox</h3>
+                    <p class="text-center title" style="width: 310px;color: rgb(163,162,162);"><em>Executive Chef&nbsp;</em><br><em>Catering/cooking classes/Events</em></p>
+                    <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Shawn@sproutcreekfarm.org">Shawn@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-9885</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul></ul><img src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <ul>
+                            <li style="height: 35px;font-size: 20px;">About</li>
+                            <li style="font-size: 20px;height: 35px;">Market</li>
+                            <li style="height: 35px;font-size: 20px;">At The Farm</li>
+                            <li style="font-size: 20px;height: 35px;">Support</li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
+                        <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
+                    </div>
+                    <div class="col item social" style="height: 41px;"><a href="https://www.facebook.com/sproutcreekfarm/" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/sproutcreekfarm?lang=en"><i class="icon ion-social-twitter"></i></a><a href="https://twitter.com/sproutcreekfarm?lang=en"><i class="icon ion-social-snapchat"></i></a><a href="https://www.instagram.com/sproutcreekfarm/?hl=en"><i class="icon ion-social-instagram"></i></a></div>
+                    <div
+                        class="clearfix"></div>
+            </div>
+            <p class="copyright">Sprout Creek Farm © 2019</p>
+    </div>
+    </footer>
+    </div>
+  --> 
+    <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+    <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+    <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
+    <script src="javasscripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
+</body>
