--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,7 +26,7 @@
 <body style="background-color: #fffdfa;">
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
         <div class="container-fluid"><img class="img-fluid" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
-            <div><a class="navbar-brand text-left float-left" href="#" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
+            <div><a class="navbar-brand text-left float-left" href="/" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
             <button
                 data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
@@ -65,7 +65,7 @@
     </nav>
 
     <!-- Body -->
-    <div class="container" style="height: 1180px;">{{{body}}}</div>
+    <div class="container" style="height: 100%;">{{{body}}}</div>
 
     <!-- Footer -->
     <div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
