--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,36 @@
+<body style="background-color: #fffdfa;">
+  <div class="container" style="height: 663px;padding: -1px;width: 100%;">
+      <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
+          <div class="card-body p-0">
+              <div class="row">
+                  <div class="col-lg-6 d-none d-lg-flex">
+                      <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;assets/img/Screen%20Shot%202019-10-17%20at%2012.45.40%20PM.png?h=ad61056d996fd9c621711ba11e9c57b4&quot;);height: 525px;background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
+                  </div>
+                  <div class="col-lg-6">
+                      <div class="p-5" style="margin-top: 20px;">
+                          <div class="text-center">
+                              <h4 class="text-dark mb-4" style="font-size: 39px;margin-bottom: 4px;">Welcome Back!</h4>
+                          </div>
+                          <form class="user" style="margin-top: 0px;">
+                              <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="font-size: 18px;"></div>
+                              <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="font-size: 18px;"></div>
+                              <div class="form-group">
+                                  <div class="custom-control custom-checkbox small">
+                                      <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1" style="font-size: 14px;">Remember Me</label></div>
+                                  </div>
+                              </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Login</button>
+                              <hr>
+                              <hr>
+                          </form>
+                          <div class="text-center"><a class="small" href="forgotPassword.html" style="font-size: 16px;">Forgot Password?</a></div>
+                          <div class="text-center"><a class="small" href="createAccount.html" style="font-size: 16px;">Create an Account!</a></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+<!--
 <link rel='stylesheet' href='/stylesheets/login.css' />
 <script src="javascripts/login.js" async></script>
 
@@ -37,3 +70,5 @@
     </table>
   </form>
 </div>
+-->
+</body>
