Successfully integrated handlebars with forgot password and fixed market in the nav bar

--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -1,24 +1,38 @@
-<script src="javascripts/forgotPassword.js" async></script>
-
-<h2> FORGOT DA PASSWORD </h2>
-
-
-
-  <h2 class="center-text"> Forgot Password </h2>
-  <span id="response"></span>
-  <form>
-    <table>
-      <tr>
-        <td>
-          Email
-        </td>
-        <td>
-          <input id="email" type="textbox"/>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <input type="button" value="Submit" onClick="forgotPassword()"/>
-    </table>
-  </form>
+<body>
+<div class="container" style="height: 663px;padding: -1px;width: 100%;">
+    <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
+        <div class="card-body p-0">
+            <div class="row">
+                <div class="col-lg-6 d-none d-lg-flex">
+                    <div class="flex-grow-1 bg-password-image" style="background-image: url(&quot;assets/img/DSC_0531.jpg?h=ec54c7886e4d8cf8216ad3636f6388dc&quot;);height: 526px;"></div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-5" style="height: 462px;margin-top: 20px;">
+                        <div class="text-center">
+                            <h4 class="text-dark mb-2" style="font-size: 33px;">Forgot Your Password?</h4>
+                            <p class="mb-4" style="font-size: 17px;">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
+                        </div>
+                        <form class="user">
+                            <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="font-size: 18px;"></div><button class="btn btn-primary btn-block text-white btn-user"
+                                type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Reset Password</button></form>
+                        <div class="text-center">
+                            <hr><a class="small" href="createAccount.html" style="font-size: 16px;">Create an Account!</a></div>
+                        <div class="text-center"><a class="small" href="createAccount.html" style="font-size: 16px;">Already have an account? Login!</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+<script src="assets/js/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
+<script src="assets/js/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
+</body>
+
+<script src="javascripts/forgotPassword.js" async></script>
