--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
                     <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
                         <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-size: 20px;">Market</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="market" style="font-size: 20px;">Market</a></li>
                         <li class="nav-item" role="presentation"></li>
                         <li class="nav-item dropdown" style="background-color: rgb(255,250,241);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="font-size: 20px;">At The Farm&nbsp;</a>
                             <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Visit The Farm</a><a class="dropdown-item" role="presentation" href="#">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog.html">Blog</a></div>
