Fixed some problems for stage and built out more of the user page and goat points

--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -7,7 +7,8 @@
   <li> <a href="/user_dashboard/view_orders"> View Orders </a> </li>
   <li> <a href="/user_dashboard/edit_information"> Edit Information </a> </li>
 </ul>
-
+<h1> Your goat points </h1>
+<h1> {{goatPoints}} </h1>
 <input type=button value="logout" onClick="eraseCookie()"/>
 
 <script> function eraseCookie() {
